UX layout issues

--- a/src/app/pages/renewal-form/renewal-form.scss
+++ b/src/app/pages/renewal-form/renewal-form.scss
@@ -4,6 +4,11 @@
     padding-bottom: 12rem;
     padding-top: 4rem;
 
+    ::-webkit-inner-spin-button,
+    ::-webkit-outer-spin-button {
+        transform: scale(1.5);
+    }
+
     h1 {
         @include set-font(h2);
     }
@@ -28,6 +33,8 @@
     .fixed-fields {
         label {
             @include set-font(body-regular);
+
+            font-weight: bold;
         }
     }
 
@@ -45,7 +52,7 @@
         align-items: baseline;
         display: grid;
         gap: 1rem;
-        grid-template-columns: auto 1fr;
+        grid-template-columns: auto 7.2rem;
         width: max-content;
     }
 }
